Set "removeComments" to true in tsconfig.json > compilerOptions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "outDir": "stable"
+    "outDir": "stable",
+    "removeComments": true
   },
   "exclude": [
     "node_modules"
